<resources>
    <string name="author_web">https://space.bilibili.com/393593468</string>
    <string name="scut_deleted_pc">PC deleted</string>
    <string name="scut_not_paired">PC not paired</string>
    <string name="scut_pc_not_found">PC not found</string>
    <string name="scut_invalid_uuid">Provided PC is not valid</string>
    <string name="scut_invalid_app_id">Provided App is not valid</string>
    <string name="help_loading_title">Help Viewer</string>
    <string name="help_loading_msg">Loading help page…</string>
    <string name="pcview_menu_header_online">Online</string>
    <string name="pcview_menu_header_offline">Offline</string>
    <string name="pcview_menu_header_unknown">Refreshing</string>
    <string name="pcview_menu_app_list">View All Apps</string>
    <string name="widget_name">Game List</string>
    <string name="widget_configure_title">Select Computer</string>
    <string name="widget_no_apps">No apps found</string>
    <string name="widget_tap_to_refresh">Tap to refresh</string>
    <string name="widget_configure_prompt">Choose a computer to display games from:</string>
    <string name="pcview_menu_pair_pc">Pair with PC</string>
    <string name="pcview_menu_unpair_pc">Unpair</string>
    <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
    <string name="pcview_menu_delete_pc">Delete PC</string>
    <string name="pcview_menu_test_network">Test Network Connection</string>
    <string name="pcview_menu_details">View Details</string>
    <string name="pcview_menu_secondary_screen">Secondary Screen Stream (Foundation Sunshine Compatible)</string>
    <string name="pcview_menu_eol">NVIDIA GameStream End-of-Service</string>
    <string name="pcview_menu_sleep_success">Host sleep success</string>
    <string name="pcview_menu_sleep_fail">Host sleep failed</string>
    <string name="pcview_menu_disable_ipv6">Disable IPv6</string>
    <string name="pcview_menu_enable_ipv6">Enable IPv6</string>
    <string name="pcview_ipv6_disabled">IPv6 disabled for this PC</string>
    <string name="pcview_ipv6_enabled">IPv6 enabled for this PC</string>
    <string name="nettest_title_waiting">Testing Network Connection</string>
    <string name="nettest_text_waiting">Moonlight is testing your network connection to determine if any required ports are blocked.\n\nThis may take a few seconds…</string>
    <string name="nettest_title_done">Network Test Complete</string>
    <string name="nettest_text_success">Your network does not appear to be blocking Moonlight. If you still have trouble connecting, check your PC\'s firewall settings.\n\nIf you are trying to stream over the Internet, install the Moonlight Internet Hosting Tool on your PC and run the included Internet Streaming Tester to check your PC\'s Internet connection.</string>
    <string name="nettest_text_inconclusive">The network test could not be performed because none of Moonlight\'s connection testing servers were reachable. Check your Internet connection or try again later.</string>
    <string name="nettest_text_failure">Your device\'s current network connection seems to be blocking Moonlight. Streaming over the Internet may not work while connected to this network.\n\nThe following network ports were blocked:\n</string>
    <string name="nettest_text_blocked">Your device\'s current network connection is blocking Moonlight. Streaming over the Internet may not work while connected to this network.</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
    <string name="pair_pairing_title">Pairing</string>
    <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
    <string name="pair_pairing_help">If your host PC is running Sunshine, navigate to the Sunshine web UI to enter the PIN.</string>
    <string name="pair_incorrect_pin">Incorrect PIN</string>
    <string name="pair_fail">Pairing failed</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="wol_pc_online">Computer is online</string>
    <string name="wol_no_mac">Unable to wake PC because there is no stored MAC address</string>
    <string name="wol_waking_pc">Waking PC…</string>
    <string name="wol_waking_msg">It may take a few seconds for your PC to wake up.
	    If it doesn\'t, make sure it\'s configured properly for Wake-On-LAN.
    </string>
    <string name="wol_fail">Failed to send Wake-On-LAN packets</string>
    <string name="unpairing">Unpairing…</string>
    <string name="unpair_success">Unpaired successfully</string>
    <string name="unpair_fail">Failed to unpair</string>
    <string name="unpair_error">Device was not paired</string>
    <string name="error_pc_offline">Computer is offline</string>
    <string name="no_app_found_for_streaming">No app found for streaming</string>
    <string name="error_manager_not_running">The ComputerManager service is not running. Please wait a few seconds or restart the app.</string>
    <string name="error_unknown_host">Failed to resolve host</string>
    <string name="error_404">GFE returned an HTTP 404 error. Make sure your PC is running a supported GPU.
	    Using remote desktop software can also cause this error. Try rebooting your machine or reinstalling GFE.
    </string>
    <string name="error_interrupted">The operation was interrupted</string>
    <string name="title_decoding_error">Video Decoder Crashed</string>
    <string name="message_decoding_error">Moonlight has crashed due to an incompatibility with this device\'s video decoder. Try adjusting the streaming settings if the crashes continue.</string>
    <string name="title_decoding_reset">Video Settings Reset</string>
    <string name="message_decoding_reset">Your device\'s video decoder continues to crash at your selected streaming settings. Your streaming settings have been reset to default.</string>
    <string name="error_usb_prohibited">USB access is prohibited by your device administrator. Check your Knox or MDM settings.</string>
    <string name="unable_to_pin_shortcut">Your current launcher does not allow for creating pinned shortcuts.</string>
    <string name="video_decoder_init_failed">Video decoder failed to initialize. Your device may not support the selected resolution or frame rate.</string>
    <string name="no_video_received_error">No video received from host.</string>
    <string name="no_frame_received_error">Your network connection isn\'t performing well. Reduce your video bitrate setting or try a faster connection.</string>
    <string name="early_termination_error">Something went wrong on your host PC when starting the stream.\n\nMake sure you don\'t have any DRM-protected content open on your host PC. You can also try restarting your host PC.</string>
    <string name="frame_conversion_error">The host PC reported a fatal video encoding error.\n\nTry disabling HDR mode, changing the streaming resolution, or changing your host PC\'s display resolution.</string>
    <string name="check_ports_msg">Check your firewall and port forwarding rules for port(s):</string>
    <string name="conn_establishing_title">Establishing Connection</string>
    <string name="conn_establishing_msg">Starting connection</string>
    <string name="conn_metered">Warning: Your active network connection is metered!</string>
    <string name="conn_client_latency">Average frame decoding latency:</string>
    <string name="conn_client_latency_hw">hardware decoder latency:</string>
    <string name="conn_hardware_latency">Average hardware decoding latency:</string>
    <string name="conn_starting">Starting</string>
    <string name="conn_error_title">Connection Error</string>
    <string name="conn_error_msg">Failed to start</string>
    <string name="conn_terminated_title">Connection Terminated</string>
    <string name="conn_terminated_msg">The connection was terminated.</string>
    <string name="error_code_prefix">Error code:</string>
    <string name="notification_icon">Notification icon</string>
    <string name="copy_content">Copy Content</string>
    <string name="copy_success">Content copied to clipboard</string>
    <string name="layout_config_item_text_c8ce4">Rename</string>
    <string name="layout_config_item_text_2f4aa">Delete</string>
    <string name="layout_dlg_easytier_panel_text_7ae64">Network Status</string>
    <string name="layout_dlg_easytier_panel_text_5117b">Edit Configuration</string>
    <string name="layout_dlg_easytier_panel_cd_4f8d4">Refresh Status</string>
    <string name="layout_dlg_easytier_panel_text_7095b">Network Name</string>
    <string name="layout_dlg_easytier_panel_hint_99c30">e.g. easytier</string>
    <string name="layout_dlg_easytier_panel_text_89d10">Network Secret</string>
    <string name="layout_dlg_easytier_panel_text_4af73">Local Virtual IPv4 Address (mask default /24)</string>
    <string name="layout_dlg_easytier_panel_hint_8913a">e.g. 10.0.0.6</string>
    <string name="layout_dlg_easytier_panel_text_ed11e">Listeners (one per line)</string>
    <string name="layout_dlg_easytier_panel_hint_388a0">e.g. udp://0.0.0.0:11010</string>
    <string name="layout_dlg_easytier_panel_text_89168">Peers (one per line)</string>
    <string name="layout_dlg_easytier_panel_hint_eabff">e.g. tcp://1.2.3.4:11010</string>
    <string name="layout_dlg_easytier_panel_text_537e0">Advanced Feature Flags</string>
    <string name="layout_dlg_easytier_panel_text_e7e21">Core Network Behavior</string>
    <string name="layout_dlg_easytier_panel_text_4ad29">Use Smoltcp</string>
    <string name="layout_dlg_easytier_panel_text_6785a">Latency Priority</string>
    <string name="layout_dlg_easytier_panel_text_faebe">Disable P2P (Force Relay)</string>
    <string name="layout_dlg_easytier_panel_text_fd3ab">Private Mode</string>
    <string name="layout_dlg_easytier_panel_text_c2266">Disable IPv6</string>
    <string name="layout_dlg_easytier_panel_text_416db">Proxy &amp; Protocol</string>
    <string name="layout_dlg_easytier_panel_text_93070">Enable KCP Proxy</string>
    <string name="layout_dlg_easytier_panel_text_6ea99">Disable KCP Input</string>
    <string name="layout_dlg_easytier_panel_text_6618e">Enable QUIC Proxy</string>
    <string name="layout_dlg_easytier_panel_text_02eb9">Disable QUIC Input</string>
    <string name="layout_dlg_easytier_panel_text_4b503">Use System Proxy Forwarding</string>
    <string name="layout_dlg_easytier_panel_text_9c403">Security &amp; Connection</string>
    <string name="layout_dlg_easytier_panel_text_e7fa3">Disable Encryption</string>
    <string name="layout_dlg_easytier_panel_text_c5d9c">Disable UDP Hole Punching</string>
    <string name="layout_dlg_easytier_panel_text_8ccac">Disable Symmetric NAT Hole Punching</string>
    <string name="layout_dlg_peer_info_item_text_f5873">Virtual IP:</string>
    <string name="layout_dlg_peer_info_item_text_e960e">NAT Type:</string>
    <string name="layout_dlg_peer_info_item_text_9d9a3">Latency:</string>
    <string name="layout_dlg_peer_info_item_text_681b4">Traffic (Rx/Tx):</string>
    <string name="layout_page_config_text_9eba2">Current Configuration</string>
    <string name="layout_page_config_text_83a23">Enable Touch</string>
    <string name="layout_page_config_text_f4b7c">Touchpad Mode</string>
    <string name="layout_page_config_text_8ea81">Multi-Touch Mode</string>
    <string name="layout_page_config_text_cd2c1">Game Vibration</string>
    <string name="layout_page_config_text_f4651">Button Vibration</string>
    <string name="layout_page_config_text_66ab5">Add</string>
    <string name="layout_page_config_text_df603">Exit Crown Configuration</string>
    <string name="apptext_pg_config_835d4">Touchpad Sensitivity</string>
    <string name="apptext_pg_config_3f729">Virtual Mouse Scroll Speed</string>
</resources>