<?xml version="1.0" encoding="utf-8"?>
<com.limelight.binding.input.advance_setting.superpage.SuperPageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:tag="250">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingTop="3dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/super_content_box_background">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp">
                <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/layout_page_config_text_9eba2"/>
                </FrameLayout>
                <Spinner
                    android:id="@+id/config_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:max="10"
                    android:min="1"
                    app:progress="10"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_83a23"/>
                <Switch
                    android:id="@+id/mouse_enable_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:checked="true"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_f4b7c"/>
                <Switch
                    android:id="@+id/trackpad_enable_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:checked="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/enhanced_touch_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_8ea81"/>
                <Switch
                    android:id="@+id/enhanced_touch_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:checked="false"/>
            </LinearLayout>

            <com.limelight.binding.input.advance_setting.superpage.NumberSeekbar
                android:id="@+id/mouse_sense_number_seekbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                app:text="@string/apptext_pg_config_835d4"
                app:max="500"
                app:min="1"
                app:progress="100" />

            <com.limelight.binding.input.advance_setting.superpage.NumberSeekbar
                android:id="@+id/mouse_wheel_speed_number_seekbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                app:max="100"
                app:min="1"
                app:progress="20"
                app:text="@string/apptext_pg_config_3f729" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_cd2c1"/>
                <Switch
                    android:id="@+id/game_vibrator_enable_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_f4651"/>
                <Switch
                    android:id="@+id/button_vibrator_enable_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp">
                <Button
                    android:id="@+id/add_config_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/layout_page_config_text_66ab5"/>
                <Button
                    android:id="@+id/rename_config_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/layout_config_item_text_c8ce4"/>
                <Button
                    android:id="@+id/delete_config_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/layout_config_item_text_2f4aa"/>
            </LinearLayout>

            <Button
                android:id="@+id/exit_crown_config_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:text="@string/layout_page_config_text_df603" />

        </LinearLayout>
    </ScrollView>
</com.limelight.binding.input.advance_setting.superpage.SuperPageLayout>

